fixed crud spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,7 +98,7 @@ a, a:visited, a:hover {
 
 .picture {
   margin: 2px;
-  height: 160px;
+  height: 170px;
   width: 140px;
   float: left;
   text-align: center;
@@ -112,5 +112,4 @@ a, a:visited, a:hover {
 
 .crud{
 	color: red;
-	margin: 5px;
 }
